[package]
name = "redips-blockchain"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
actix-web = "4.4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hex = "0.4"
secp256k1 = { version = "0.28", features = ["rand", "recovery", "global-context"] }
bip39 = "2.0"
sled = "0.34"
ripemd = "0.1"
chrono = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
